--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,45 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <!--jdbc 实现datasource配置的条件-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>1.5.2.RELEASE</version>
+        </dependency>
+
+        <!--mysql 提供驱动类-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.44</version>
+        </dependency>
+
+        <!--mybatis提供的springboot配置依赖-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+        <!--apache common工具包 java.lang包扩展-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
+        <!--elasticsearch 全文检索以来 5.5.2-->
+        <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch</artifactId>
+            <version>5.5.2</version>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
