--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=10005
+server.port=8848
 server.context-path=/
 
 # datasource
@@ -9,7 +9,7 @@ spring.datasource.password=root
 
 # sqlSession classpath:==roottarget/classes src/main/resources/mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.jt.common.pojo
+mybatis.type-aliases-package=com.boluo.boluoblog.domain
 
 # mybatis single config
 mybatis.configuration.map-underscore-to-camel-case=true
