--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=root
 
 # sqlSession classpath:==roottarget/classes src/main/resources/mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
-mybatis.type-aliases-package=com.boluo.boluoblog.domain
+mybatis.type-aliases-package=com.boluo.blog.domain
 
 # mybatis single config
 mybatis.configuration.map-underscore-to-camel-case=true
