--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.context-path=/
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///boluo?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql:///blog?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 
