--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8848
 server.context-path=/
 
+spring.resources.static-locations=classpath:/templates/
+spring.thymeleaf.suffix=index.html
+
 # datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql:///blog?characterEncoding=UTF-8
