爬取某瓣电影 -> 该计划暂且搁置, 我要去执行一项伟大的工程

--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
             <version>1.10.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
         <!-- 解决 NoClassDefFoundError -->
         <dependency>
             <groupId>org.codehaus.janino</groupId>
