存储视频到本地

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.suffix=index.html
 
 # datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///blog?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql:///blog?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
